tests/errors/runtime.OutOfBounds.art
arr: ["zero" "one" "two" "three"]

print arr\0
print arr\1
print arr\5
print arr\2
print arr\3